--- a/book.toml
+++ b/book.toml
@@ -2,5 +2,5 @@
 authors = ["phucvinh57"]
 language = "en"
 multilingual = false
-src = "src"
-title = "HPC Monitoring Documentation"
+src = "docs"
+title = "MIPS Simulator"
