--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "design-patterns",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:ngyngcphu/Design-Patterns.git",
+  "author": "ngyngcphu",
+  "license": "MIT",
+  "scripts": {
+    "factoryMethod-conceptual": "ts-node src/creational-patterns/factory-method/typescript/conceptual.ts"
+  },
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
