--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "system",
-        "target": "ES5",
-        "noImplicitAny": false,
-        "sourceMap": false,
-		"outFile": "patterns.js"
-    },
-	"files": [
-		"src/creational-patterns/factory-method/typescript/conceptual.ts"
-	]
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "compilerOptions": {
+    "target": "es2017",
+    "strict": true,
+  },
 }
